# energy-based-pendulum

./: Entrypoint.ipynb  LICENSE  PPO.ipynb  PPO.py  PpoTraining.ipynb  README.md  Report.ipynb  TRPO.ipynb  build_charts.ipynb  dev.ipynb  pyproject.toml  training_log.csv
models/: trpo-0.pt  trpo-100.pt  trpo-200.pt  trpo-289.pt  trpo-299.pt  trpo-best.pt  trpo_best.pt  trpo_inverted_double_pendulum_epoch_0.pt  trpo_inverted_double_pendulum_epoch_100.pt  trpo_inverted_double_pendulum_epoch_200.pt  trpo_inverted_double_pendulum_epoch_299.pt  trpo_inverted_double_pendulum_epoch_300.pt  trpo_inverted_double_pendulum_epoch_329.pt  trpo_inverted_double_pendulum_epoch_399.pt  trpo_inverted_double_pendulum_epoch_99.pt
results/: ppo-best.pt  ppo-energies-best.pt  ppo-eval-energies.csv  ppo-eval-energy.csv  ppo-eval-reward.csv  ppo-eval-rewards.csv  ppo-rewards-best.pt  ppo-train-energies.csv  ppo-train-energy.csv  ppo-train-energy_rewards.csv  ppo-train-rewards.csv  random.csv  results.csv  trpo-best.pt  trpo-energies-best.pt  trpo-eval-energies.csv  trpo-eval-energy.csv  trpo-eval-energy_rewards.csv  trpo-eval-reward.csv  trpo-eval-rewards.csv  trpo-rewards-best.pt  trpo-train-energies.csv  trpo-train-energy.csv  trpo-train-energy_rewards.csv  trpo-train-rewards.csv
src/: baseline.py  ppo.py  reward.py  tools.py  trpo.py  utils.py
